--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 John Smilga-React/Section-5-Basic-Projects/react-projects-master/19-stock-photos/setup/Fluffy.txt
+John Smilga-React/Section-5-Basic-Projects/react-projects-master/21-movie-db/setup/info.txt
