--- a/02-Designing-React-17-Components/01/package.json
+++ b/02-Designing-React-17-Components/01/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"},
+    "start": "next start"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-placeholder": "^4.1.0"
   }
 }
